--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@heroicons/react": "^2.1.3",
     "@material-tailwind/react": "^2.1.9",
     "@mui/material": "^5.15.15",
     "@testing-library/jest-dom": "^5.17.0",
@@ -14,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "react-truncate": "^2.4.0",
     "web-vitals": "^2.1.4"
   },
