--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@fontsource/roboto": "^5.0.13",
     "@heroicons/react": "^2.1.3",
     "@material-tailwind/react": "^2.1.9",
-    "@mui/material": "^5.15.15",
+    "@mui/icons-material": "^5.15.16",
+    "@mui/material": "^5.15.16",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -16,8 +19,13 @@
     "react-icons": "^5.1.0",
     "react-loader-spinner": "^6.1.6",
     "react-scripts": "5.0.1",
+    "react-scrollspy": "^3.4.3",
     "react-spinners": "^0.13.8",
+    "react-swipeable-views": "^0.14.0",
+    "react-swipeable-views-utils": "^0.14.0",
+    "react-transition-group": "^4.4.5",
     "react-truncate": "^2.4.0",
+    "styled-components": "^6.1.9",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
