--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
@@ -56,5 +57,8 @@
     "react-router-dom": "^6.22.3",
     "tailwindcss": "^3.4.3",
     "tailwindcss-animated": "^1.0.1"
+  },
+  "volta": {
+    "node": "14.21.3"
   }
 }
