--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-spinners": "^0.13.8",
     "react-swipeable-views": "^0.14.0",
     "react-swipeable-views-utils": "^0.14.0",
+    "react-toastify": "^10.0.5",
     "react-transition-group": "^4.4.5",
     "react-truncate": "^2.4.0",
     "styled-components": "^6.1.9",
