--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
     "fedapay-reactjs": "^1.0.0",
+    "i18next": "^23.11.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.1.2",
     "react-icons": "^5.1.0",
     "react-loader-spinner": "^6.1.6",
     "react-scripts": "5.0.1",
